fix(App.css): add auto margin to #root for center alignment in the layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   max-width: 1280px;
   padding: 0%;
+  margin: 0 auto;
   /* text-align: center; */
 }
 
